--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+annotated-types==0.7.0
+anyio==4.8.0
+click==8.1.8
 dnspython==2.7.0
+fastapi==0.115.11
 filelock==3.18.0
+h11==0.14.0
 idna==3.10
 py3-validate-email @ git+https://git.ksol.io/karolyi/py3-validate-email@32c8f4cdfaba4c7e7fc81405a023c849a9268859
+pydantic==2.10.6
+pydantic_core==2.27.2
 python-dotenv==1.0.1
+sniffio==1.3.1
+starlette==0.46.1
 typing_extensions==4.12.2
+uvicorn==0.34.0
